Opened 12 years ago

Closed 12 years ago

#3892 closed defect (fixed)

snow: deadlock (fuzzed file)

Reported by: ami_stuff Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: snow deadlock
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

(gdb) r -i snowdeadf.avi -f null -
Starting program: /media/sdb1/ffmpeg-snapshot/ffmpeg_g -i snowf.avi -f null -
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
ffmpeg version 2.3.git Copyright (c) 2000-2014 the FFmpeg developers
  built on Aug 14 2014 23:56:56 with gcc 4.7 (Debian 4.7.2-5)
  configuration: --disable-yasm --enable-gpl --disable-ffserver --disable-ffprobe
  libavutil      54.  3.100 / 54.  3.100
  libavcodec     56.  0.101 / 56.  0.101
  libavformat    56.  1.100 / 56.  1.100
  libavdevice    56.  0.100 / 56.  0.100
  libavfilter     5.  0.100 /  5.  0.100
  libswscale      3.  0.100 /  3.  0.100
  libswresample   1.  0.100 /  1.  0.100
  libpostproc    53.  0.100 / 53.  0.100
Input #0, avi, from 'snowdeadf.avi':
  Metadata:
    encoder         : Lavf56.1.100
  Duration: 00:00:12.64, start: 0.000000, bitrate: 256 kb/s
    Stream #0:0: Video: snow (SNOW / 0x574F4E53), yuv444p, 321x321, 247 kb/s, 23.97 fps, 23.97 tbr, 23.97 tbn, 23.97 tbc
[New Thread 0xb7bebb70 (LWP 31736)]
[New Thread 0xb73ebb70 (LWP 31746)]
[New Thread 0xb6bebb70 (LWP 31747)]
[New Thread 0xb63ebb70 (LWP 31748)]
[New Thread 0xb5bebb70 (LWP 31749)]
[New Thread 0xb53ebb70 (LWP 31750)]
[New Thread 0xb4bebb70 (LWP 31751)]
[New Thread 0xb43ebb70 (LWP 31752)]
[New Thread 0xb3bebb70 (LWP 31753)]
Output #0, null, to 'pipe:':
  Metadata:
    encoder         : Lavf56.1.100
    Stream #0:0: Video: rawvideo (444P / 0x50343434), yuv444p, 321x321, q=2-31, 200 kb/s, 23.97 fps, 23.97 tbn, 23.97 tbc
    Metadata:
      encoder         : Lavc56.0.101 rawvideo
Stream mapping:
  Stream #0:0 -> #0:0 (snow (native) -> rawvideo (native))
Press [q] to stop, [?] for help
[null @ 0x93b8c20] Encoder did not produce proper pts, making some up.
[snow @ 0x93b8760] Error s->spatial_decomposition_count is 0
Error while decoding stream #0:0: Invalid data found when processing input
[snow @ 0x93b8760] Error s->spatial_decomposition_count is 102
Error while decoding stream #0:0: Invalid data found when processing input
[snow @ 0x93b8760] block_max_depth= -1 is too large
Error while decoding stream #0:0: Invalid data found when processing input
[snow @ 0x93b8760] spatial_decomposition_type 65 not supported
Error while decoding stream #0:0: Invalid data found when processing input
[snow @ 0x93b8760] spatial_decomposition_type 60 not supported
Error while decoding stream #0:0: Invalid data found when processing input
[snow @ 0x93b8760] spatial_decomposition_type 58 not supported
Error while decoding stream #0:0: Invalid data found when processing input
[snow @ 0x93b8760] spatial_decomposition_type 57 not supported
Error while decoding stream #0:0: Invalid data found when processing input
[snow @ 0x93b8760] spatial_decomposition_type 55 not supported
Error while decoding stream #0:0: Invalid data found when processing input
[snow @ 0x93b8760] spatial_decomposition_type 56 not supported
Error while decoding stream #0:0: Invalid data found when processing input
[snow @ 0x93b8760] spatial_decomposition_type 57 not supported
Error while decoding stream #0:0: Invalid data found when processing input
[snow @ 0x93b8760] spatial_decomposition_type 58 not supported
Error while decoding stream #0:0: Invalid data found when processing input

Program received signal SIGINT, Interrupt.
0x086f3240 in unpack_coeffs (parent=0xb7bf9fa0, b=0xb7c0a3e0, s=0xb7bec020, 
    orientation=<optimized out>) at libavcodec/snow.h:680
680	                    if(y) max_run= FFMIN(run, prev_xc->x - x - 2);
(gdb) bt
#0  0x086f3240 in unpack_coeffs (parent=0xb7bf9fa0, b=0xb7c0a3e0, 
    s=0xb7bec020, orientation=<optimized out>) at libavcodec/snow.h:680
#1  decode_frame (avctx=0x93b8760, data=0x93bc560, got_frame=0xbffff52c, 
    avpkt=0xbffff2c8) at libavcodec/snowdec.c:481
#2  0x0873f48f in avcodec_decode_video2 (avctx=0x93b8760, 
    picture=picture@entry=0x93bc560, 
    got_picture_ptr=got_picture_ptr@entry=0xbffff52c, 
    avpkt=avpkt@entry=0xbffff798) at libavcodec/utils.c:2264
#3  0x080c94b4 in decode_video (ist=ist@entry=0x93ba940, 
    pkt=pkt@entry=0xbffff798, got_output=got_output@entry=0xbffff52c)
    at ffmpeg.c:1883
#4  0x080cd9bb in process_input_packet (pkt=0xbffff750, ist=0x93ba940)
    at ffmpeg.c:2117
#5  process_input (file_index=-1073743976) at ffmpeg.c:3524
#6  0x080afb52 in transcode_step () at ffmpeg.c:3618
#7  transcode () at ffmpeg.c:3670
#8  main (argc=<optimized out>, argv=<optimized out>) at ffmpeg.c:3846
(gdb) 

Attachments (1)

snowdeadf.avi (395.1 KB ) - added by ami_stuff 12 years ago.

Download all attachments as: .zip

Change History (3)

by ami_stuff, 12 years ago

Attachment: snowdeadf.avi added

comment:1 by Carl Eugen Hoyos, 12 years ago

Component: undeterminedavcodec
Keywords: snow deadlock added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Michael Niedermayer, 12 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.